# ukl-fetch-dip

./: .gitignore  README.md  pyproject.toml
examples/: fetch_329mb.py
tests/: fetcher_test.py
ukl_fetch_dip/: fetcher.py
