[tool.poetry]
name = "ukl-fetch-dip"
version = "0.1.0"
description = ""
authors = ["MLE Slone <m.slone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watcher = "^0.4.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
