[project]
name = "ukl-fetch-dip"
version = "0.1.0"
description = ""
authors = [{ name = "MLE Slone", email = "m.slone@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = ["requests>=2.32.3,<3"]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9",
    "pytest-watcher>=0.4.3,<0.5",
    "black>=24.10.0,<25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
